# breezy-dotfiles

./: .gitmodules  README.md  install.sh
config/fastfetch/: config.jsonc  nyarch.jsonc
config/firefox/: user.js
config/gtk/: Xresources
config/gtk/gtk-3.0/: settings.ini
config/i3/: config
config/kitty/: kitty.conf
config/polybar/: config.ini  launch.sh
config/scripts/: scan-invoice.sh  scan-learn.sh  scan-master.sh  scan-vendors.json  theme
config/scripts/scan-master-cpp/: .gitignore  CMakeLists.txt  README.md
config/scripts/scan-master-cpp/src/: context_learner.cpp  context_learner.h  document.cpp  file_namer.cpp  file_namer.h  invoice_extractor.cpp  invoice_extractor.h  main.cpp  main_invoice.cpp  main_learn.cpp  pipeline.cpp  pipeline.h  types.h  utils.cpp  utils.h  vendor_config.cpp  vendor_config.h  vendor_detector.cpp  vendor_detector.h
config/scripts/scan-master-cpp/tests/: test_vendor_detector.cpp
config/scripts/scan-master-cpp/vendors/: 1800Radiator.json  ACE.json  AMZ.json  AutoAuth.json  AutoZone.json  BANK.json  CDKSimplePay.json  CapitolSubaru.json  DOT.json  DealerInvoice.json  FMI.json  FMP.json  FleetPride.json  FlemingFleet.json  IMC.json  IndustrialSource.json  JohnstoneSupply.json  NAPA.json  OReilly.json  SkylineFord.json  TAX.json  TEC.json
home/: .zshrc
